--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,12 +7,12 @@
       height: 100%;
 
       aside{
-          width: 250px;
-          min-height: calc(100% - 53px);
+          width: 300px;
+          height: calc(100vh - 53px);
 
           li{
               list-style: none;
-              margin: 15px 0;
+              margin: 25px 0;
 
               a{
                 text-decoration: none;
